Lecture 5 recursion & Tutorial 1

--- a/Lectures/05-Functions-Scope.ipynb
+++ b/Lectures/05-Functions-Scope.ipynb
@@ -473,6 +473,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Anything after a return statement is not run."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def welcome(who,what='Python'):\n",
+    "    x='Good morning '+who+', Welcome to a class on '+what\n",
+    "    return x\n",
+    "    print()\n",
+    "\n",
+    "l=welcome('Students')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Scope"
    ]
   },
@@ -486,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +548,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m     y\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mhello\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      3\u001b[0m     \u001b[39mprint\u001b[39m(y)\n\u001b[0;32m----> 5\u001b[0m \u001b[39mprint\u001b[39m(y)\n",
+      "Cell \u001b[0;32mIn[18], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m     y\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mhello\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      3\u001b[0m     \u001b[39mprint\u001b[39m(y)\n\u001b[0;32m----> 5\u001b[0m \u001b[39mprint\u001b[39m(y)\n",
       "\u001b[0;31mNameError\u001b[0m: name 'y' is not defined"
      ]
     }
@@ -557,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +792,7 @@
      "evalue": "name 'x' is parameter and global (4108267728.py, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[24], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    global x\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m name 'x' is parameter and global\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[25], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    global x\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m name 'x' is parameter and global\n"
      ]
     }
    ],
@@ -796,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -889,6 +911,141 @@
     "for i in range(10):\n",
     "    print(i)\n",
     "print(i)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Recursion\n",
+    "Recursion is when you call a function inside itself."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is an example of an infinite recursion. It is not very useful."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inf_rec():\n",
+    "    print('hello')\n",
+    "    inf_rec()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For a finite (good) recursions, we need a base case and parameters have to be updated in each recursion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def summation(n):\n",
+    "    if (n>0):\n",
+    "        return n + summation(n-1)\n",
+    "    else:\n",
+    "        return 0\n",
+    "    \n",
+    "summation(10)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fibonacci numbers:\n",
+    "$$0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144$$\n",
+    "$$F_n = F_{n-1} + F_{n-2}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibo(n):\n",
+    "    if n in (0, 1):\n",
+    "        return n\n",
+    "    else:\n",
+    "        return fibo(n - 1) + fibo(n - 2)\n",
+    "\n",
+    "fib_seq = [fibo(i) for i in range(13)]\n",
+    "print(fib_seq)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tower of Hanoi:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 from A to C\n",
+      "2 from A to B\n",
+      "1 from C to B\n",
+      "3 from A to C\n",
+      "1 from B to A\n",
+      "2 from B to C\n",
+      "1 from A to C\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ToH(n,source,dest,inter):           \n",
+    "    if n == 1:\n",
+    "        print(n,'from',source,'to',dest)\n",
+    "        return\n",
+    "    ToH(n-1, source,inter,dest)\n",
+    "    print(n,'from',source,'to',dest)\n",
+    "    ToH(n-1,inter,dest,source)\n",
+    " \n",
+    "ToH(3, 'A', 'C', 'B')"
    ]
   },
   {
