Lecture 7 - class attrib

--- a/Lectures/07-Classes.ipynb
+++ b/Lectures/07-Classes.ipynb
@@ -545,7 +545,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Instructor object at 0x7ff9dd6b5690>\n"
+      "<__main__.Instructor object at 0x7ff4074d0750>\n"
      ]
     }
    ],
@@ -835,9 +835,9 @@
     {
      "data": {
       "text/plain": [
-       "[<__main__.Student at 0x7ff9dd669c10>,\n",
-       " <__main__.Student at 0x7ff9dd668f90>,\n",
-       " <__main__.Student at 0x7ff9dd668090>]"
+       "[<__main__.Student at 0x7ff428ab6ad0>,\n",
+       " <__main__.Student at 0x7ff428ab5450>,\n",
+       " <__main__.Student at 0x7ff428ab5390>]"
       ]
      },
      "execution_count": 35,
@@ -1176,6 +1176,210 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Class atrributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Student:\n",
+    "    numbers = 0\n",
+    "    def __init__(self, name, marks):\n",
+    "        self.name=name\n",
+    "        self.marks=marks\n",
+    "    def get_name(self):\n",
+    "        return self.name\n",
+    "    def get_marks(self):\n",
+    "        return self.email\n",
+    "        \n",
+    "Chandan=Student('Chandan D',0)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can access numbers for the instance of Chandan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Chandan.numbers)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Can we access numbers for the class of Students"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Student.numbers)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But the attributes we define for instances are not available."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'Student' has no attribute 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[54], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mprint\u001b[39m(Student\u001b[39m.\u001b[39;49mname)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: type object 'Student' has no attribute 'name'"
+     ]
+    }
+   ],
+   "source": [
+    "print(Student.name)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us set the number of students to be 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Student.numbers=1"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Will the numbers be different for the class attribute and object attribute?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Student.numbers)\n",
+    "print(Chandan.numbers)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us redefine the class to increment the class attribute of students when we initialize an instance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Student:\n",
+    "    numbers = 0\n",
+    "    def __init__(self, name, marks):\n",
+    "        self.name=name\n",
+    "        self.marks=marks\n",
+    "        Student.numbers+=1\n",
+    "    def get_name(self):\n",
+    "        return self.name\n",
+    "    def get_marks(self):\n",
+    "        return self.email"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And if we add students. The student.number gets incremented."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "Chandan=Student('Chandan D',0)\n",
+    "Ansh=Student('Ansh Bharadwaj',100)\n",
+    "Ujjwal=Student('Ujjwal Deep',95)\n",
+    "print(Student.numbers)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Making datastructures"
    ]
   },
@@ -1191,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1252,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1336,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1354,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
